# truth-market

./: .dockerignore  .gitignore  .golangci.yml  CLAUDE.md  CODE_REVIEW.md  DEV_WORKFLOW.md  Dockerfile  Makefile  README.md  SECURITY_REVIEW.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  go.work  go.work.sum  otel-collector-config.yaml  prometheus.yml  sqlc.yaml
.github/workflows/: ci.yml  deploy.yml
api/: admin.yaml  auth.yaml  markets.yaml  openapi.yaml  rankings.yaml  trading.yaml
api/components/: parameters.yaml  responses.yaml  schemas.yaml  security.yaml
docs/: authentication.mdx  introduction.mdx  mint.json  quickstart.mdx  websocket.mdx
docs/api-reference/: overview.mdx
frontend/: Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml
infra/: go.mod  go.sum
migrations/: 000001_create_users.up.sql  000002_create_api_keys.up.sql  000003_create_markets.down.sql  000003_create_markets.up.sql  000004_create_orders.up.sql  000005_create_trades.up.sql  000006_create_positions.up.sql  000007_create_mint_transactions.down.sql  000007_create_mint_transactions.up.sql  000008_create_user_rankings.down.sql  000008_create_user_rankings.up.sql  000009_add_resolved_outcome_id.down.sql  000009_add_resolved_outcome_id.up.sql
pkg/: go.mod  go.sum
scripts/: dev-kill.sh  dev.sh
sdks/python/: pyproject.toml
sdks/python/src/truthmarket/: __init__.py  client.py  ws.py
sdks/python/src/truthmarket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/python/tests/: conftest.py  test_client.py  test_ws.py
(+241 files in other folders)
